# onto-logica

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  build-dental-materal-db.sh  dental-material.db  dental_material_ontology.db  dental_material_ontology.owl  prefix.sql
notebooks/: dental-materials-logica.ipynb
tests/: README.md
