[tool.poetry]
name = "onto-logica"
version = "0.1.0"
description = "Uses logica to create datalog queries to interact with ontologies."
authors = ["Bill Duncan <wdduncan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
oaklib = "^0.6.17"
pytest = "^7.1.3"
duckdb = "^1.1.1"
semsql = "^0.3.3"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
